# swagger.json
@@ -26,11 +26,11 @@
       "description": "User Registartion and Authentication"
     },
     {
-      "name": "accounts",
+      "name": "account",
       "description": "Opening Account and Listing Accounts"
     },
     {
-      "name": "trnasactions",
+      "name": "transactions",
       "description": "Create and List Transactions"
     }
   ],
@@ -146,208 +146,339 @@
         ]
       }
     },
-    "/user/register": {
-      "post": {
+    "/account/transactions/{accountId}": {
+      "get": {
         "tags": [
-          "user"
+          "transactions"
         ],
-        "summary": "Create user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "createUser",
-        "produces": [
-          "application/json"
-        ],
+        "summary": " Get transactions by accountId",
+        "description": "Returns a list of trnasaction for a given accountId",
+        "operationId": "getTransactionsByAccountId",
         "parameters": [
           {
-            "in": "body",
-            "name": "body",
-            "description": "Created user object",
+            "name": "accountId",
+            "in": "path",
+            "description": "Account ID",
             "required": true,
-            "schema": {
-              "$ref": "#/definitions/UserRegistartionReq"
-            }
+            "type": "string"
           }
         ],
-        "responses": {
-          "201": {
-            "description": "Registration successful",
-            "schema": {
-              "$ref": "#/definitions/AuthResponse"
-            }
-          }
-        }
-      }
-    },
-    "/user/login": {
-      "post": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Logs user into the system",
-        "description": "",
-        "operationId": "loginUser",
         "produces": [
           "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Created user object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UserLoginReq"
-            }
-          }
         ],
         "responses": {
           "200": {
-            "description": "Login successful",
+            "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/AuthResponse"
+              "$ref": "#/definitions/AccountCreationResponse"
             }
           },
-          "401": {
-            "description": "Invalid username/password supplied",
+          "404": {
+            "description": "Account not found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "transactions"
+        ],
+        "summary": " Create transactions ",
+        "description": "Creates a trnasaction for a given accountId",
+        "operationId": "createTransactionsByAccountId",
+        "parameters": [
+          {
+            "name": "accountId",
+            "in": "path",
+            "description": "Account ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Transaction creation request",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/ErrorResponse"
+              "$ref": "#/definitions/CreateTransactionRequest"
             }
           }
-        }
-      }
-    }
-  },
-  "definitions": {
-    "AccountCreationRequest": {
-      "type": "object",
-      "properties": {
-        "balance": {
-          "type": "integer",
-          "format": "int32"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/AccountCreationResponse"
+            }
+          },
+          "404": {
+            "description": "Account not found"
+          }
         },
-        "currency": {
-          "type": "string",
-          "description": "Currency",
-          "enum": [
-            "EUR",
-            "SEK",
-            "DKK",
-            "USD"
-          ]
-        },
-        "country": {
-          "type": "string",
-          "description": "Country code",
-          "enum": [
-            "FI",
-            "SE",
-            "US"
-          ]
-        },
-        "accountType": {
-          "type": "string",
-          "description": "Account Type",
-          "enum": [
-            "savings",
-            "current",
-            "minor"
-          ]
-        },
-        "kycStatus": {
-          "type": "boolean",
-          "default": false
-        }
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
-    "AccountCreationResponse": {
-      "allOf": [
-        {
-          "$ref": "#/definitions/AccountCreationRequest"
-        },
-        {
-          "type": "object",
-          "required": [
-            "id",
-            "userId"
+      "/user/register": {
+        "post": {
+          "tags": [
+            "user"
           ],
-          "properties": {
-            "id": {
-              "type": "string"
-            },
-            "userId": {
-              "type": "string"
+          "summary": "Create user",
+          "description": "This can only be done by the logged in user.",
+          "operationId": "createUser",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "body",
+              "name": "body",
+              "description": "Created user object",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/UserRegistartionReq"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Registration successful",
+              "schema": {
+                "$ref": "#/definitions/AuthResponse"
+              }
             }
           }
         }
-      ]
-    },
-    "AccountListResponse": {
-      "type": "object",
-      "properties": {
-        "accountList": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/AccountCreationResponse"
+      },
+      "/user/login": {
+        "post": {
+          "tags": [
+            "user"
+          ],
+          "summary": "Logs user into the system",
+          "description": "",
+          "operationId": "loginUser",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "body",
+              "name": "body",
+              "description": "Created user object",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/UserLoginReq"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Login successful",
+              "schema": {
+                "$ref": "#/definitions/AuthResponse"
+              }
+            },
+            "401": {
+              "description": "Invalid username/password supplied",
+              "schema": {
+                "$ref": "#/definitions/ErrorResponse"
+              }
+            }
           }
         }
       }
     },
-    "Transaction": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
+    "definitions": {
+      "AccountCreationRequest": {
+        "type": "object",
+        "properties": {
+          "balance": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "currency": {
+            "type": "string",
+            "description": "Currency",
+            "enum": [
+              "EUR",
+              "SEK",
+              "DKK",
+              "USD"
+            ]
+          },
+          "country": {
+            "type": "string",
+            "description": "Country code",
+            "enum": [
+              "FI",
+              "SE",
+              "US"
+            ]
+          },
+          "accountType": {
+            "type": "string",
+            "description": "Account Type",
+            "enum": [
+              "savings",
+              "current",
+              "minor"
+            ]
+          },
+          "kycStatus": {
+            "type": "boolean",
+            "default": false
+          }
         }
-      }
-    },
-    "UserRegistartionReq": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
+      },
+      "AccountCreationResponse": {
+        "allOf": [
+          {
+            "$ref": "#/definitions/AccountCreationRequest"
+          },
+          {
+            "type": "object",
+            "required": [
+              "id",
+              "userId"
+            ],
+            "properties": {
+              "id": {
+                "type": "string"
+              },
+              "userId": {
+                "type": "string"
+              }
+            }
+          }
+        ]
+      },
+      "AccountListResponse": {
+        "type": "object",
+        "properties": {
+          "accountList": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "$ref": "#/definitions/AccountCreationResponse"
+            }
+          }
         }
-      }
-    },
-    "UserLoginReq": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
+      },
+      "CreateTransactionRequest": {
+        "type": "object",
+        "properties": {
+          "accountId": {
+            "required": true,
+            "type": "String"
+          },
+          "transactionType": {
+            "type": "string",
+            "required": true,
+            "description": "Account Type",
+            "enum": [
+              "Credit",
+              "Debit"
+            ]
+          },
+          "amount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "currency": {
+            "type": "string",
+            "description": "Currency",
+            "enum": [
+              "EUR",
+              "SEK",
+              "DKK",
+              "USD"
+            ]
+          },
+          "date": {
+            "type": "integer",
+            "format": "date"
+          }
         }
-      }
-    },
-    "AuthResponse": {
-      "type": "object",
-      "properties": {
-        "accessToken": {
-          "type": "string"
+      },
+      "Transaction": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          }
         }
-      }
-    },
-    "ErrorResponse": {
-      "type": "object",
-      "properties": {
-        "message": {
-          "type": "string"
+      },
+      "TransactionListResponse": {
+        "type": "object",
+        "properties": {
+          "accountList": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "$ref": "#/definitions/Transaction"
+            }
+          }
+        }
+      },
+      "UserRegistartionReq": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "UserLoginReq": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "AuthResponse": {
+        "type": "object",
+        "properties": {
+          "accessToken": {
+            "type": "string"
+          }
+        }
+      },
+      "ErrorResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
         }
       }
     }
   }
-}
